# SorraAgents

./: .eslintrc.json  .gitignore  .implement_state.json  .markdownlintrc  .ralph.json  .ralph.json.example  .refactor.json.example  .tmp_sa_0ml63_desc.txt  AGENTS.md  Hello.md  Makefile  README.md  README_AMPA.md  Workflow.md  agent-metadata.txt  agent-sample.txt  ampa_daemon.py  backup-SA-0MMN9YNS41N1B77L-comments.json  opencode.json  opencode.json.tui-migration.bak  package-lock.json  package.json  pr_body.txt  pyproject.toml  pytest.ini  requirements.txt  session_block.py  tmux.windows.conf.yaml  workflow-language.md
.githooks/: post-checkout  post-merge  pre-push
.github/: ampa-dev-baseline-size
.pi/: settings.json
.ralph/: event.pending
.worklog/: config.yaml  worklog-data.jsonl
APMA/: Dockerfile  Makefile  README_CONTAINER.md
agent/: Casey.md  casey.md  forge.md  git-helpers.js  muse.md  patch.md  pixel.md  probe.md  scribbler.md  ship.js  ship.md
ampa/: .env.sample  Containerfile  Dockerfile  Makefile  README.md  README_CONTAINER.md  __init__.py  audit_poller.py  auto_delegate.py  brief_intake.py  conversation_manager.py  daemon.py  delegation.py  delegation_config.yaml  delegation_planner.py  discord_bot.py  fallback.py  metrics.py  notifications.py  pr_monitor.py  progress_report.py  requirements.txt  responder.py  run_cleanup.py  run_gh_sync.py  scheduler.py  scheduler_cli.py  scheduler_executor.py  scheduler_helpers.py  scheduler_helpers.py.backup.20260327T224107Z  scheduler_schema.md  scheduler_store.json  scheduler_store.py  scheduler_types.py  (+7 more)
(+458 files in other folders)
