[project]
name = "ampa"
version = "0.1.0"
description = "AMPA Core Heartbeat Sender"
readme = "ampa/README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "python-dotenv",
  "prometheus-client",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "discord.py>=2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ampa*", "plan*"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-timeout",
]

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 30
